feat: Merge BE and FE repositories
- Backend 업데이트: 컨트롤러, 모델, 라우트, 서비스 개선
- Frontend 업데이트: 컴포넌트, 훅, 페이지, 스타일 개선
- E2E 테스트 및 부하 테스트 추가
- Docker 설정 및 환경 구성 파일 업데이트
- 새로운 기능: 메시지 처리, 파일 업로드, AI 챗봇 연동
- 성능 최적화 및 버그 수정

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,15 +1,15 @@
 # Node.js dependencies
-**/node_modules/
+node_modules/
 dist/
 build/
 .npmrc
-# 모든 위치의 환경변수 파일 무시
-**/.env
-**/.env.local
+.env.local
+.env
+uploads
 
 # Next.js
 .next/
-./frontend/out/
+out/
 
 test-results/
 
@@ -26,5 +26,3 @@ Thumbs.db
 
 # VSCode settings
 .vscode/
-
-e2e/playwright-report/data
